<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_Calendar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/display_current_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/current_date"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="3"/>
    </LinearLayout>
    <Button
        android:id="@+id/add_calendar_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="12sp"
        android:text="@string/add_event"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/sun"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/mon"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/tue"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/wed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/wed"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/thu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/thu"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/fri"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/sat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/sat"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
    </LinearLayout>

    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="7" />



</LinearLayout>