<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/login_header"
        android:scaleType="centerCrop"
        android:src="@drawable/login_header" />

    <TextView
        android:layout_below="@id/imageview"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/load_add_user_activity"
        android:fontFamily="@font/arvo"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:fontFamily="@font/arvo"
            android:text="@string/vOrA"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/user_venue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/arvo"
                android:text="@string/venue"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/user_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/arvo"
                android:text="@string/artist"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>