<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/registration"
        android:fontFamily="@font/arvo"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:fontFamily="@font/arvo"
        android:textColorHint="@color/colorAccent"
        android:gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="text"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:fontFamily="@font/arvo"
        android:textColorHint="@color/colorAccent"
        android:gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email"
            android:inputType="text"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:fontFamily="@font/arvo"
        android:textColorHint="@color/colorAccent"
        android:gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:fontFamily="@font/arvo"
        android:textColorHint="@color/colorAccent"
        android:gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/arvo"
            android:text="@string/load_add_user_activity"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/user_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/arvo"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>