<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:paddingStart="10sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/user_name"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtUserNameAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:ems="10"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:paddingStart="10sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/user_email"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtUserEmailAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:ems="10"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:paddingStart="10sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/user_password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtUserPasswordAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:ems="10"
                android:textSize="14sp" />
        </LinearLayout>


        <Button
            android:id="@+id/createNewUserBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_user"
            android:textSize="14sp" />


        <Button
            android:id="@+id/readArtistProfileBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="read artist profile"
            android:textSize="14sp" />

        <Button
            android:id="@+id/readVenueProfileBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="read venue profile"
            android:textSize="14sp" />

        <Button
            android:id="@+id/readGigInfoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="read gig info"
            android:textSize="14sp" />

        <Button
            android:id="@+id/readTagsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="read Tags"
            android:textSize="14sp" />


    </LinearLayout>

</ScrollView>
